--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ font-size:24px;
 width:250px;
 border-radius: 50%;
 }
-
+ 
 img hover {
  opacity: 1.0;
  filter: alpha(opacity=100);
@@ -84,8 +84,16 @@ h2 h5 {
 	text-align:center ;
 }
 
+
+
+.jquery-img .css-img{
+	width:100px !important;
+}
+
+
+
 img{
-	width:100%;
+	position:relative;
 }
 
 .container-about {
@@ -110,15 +118,12 @@ button:hover {
 
 /* Skill Grid */
 
-.grid-container {
+ .grid-container {
 
 	padding:10px;
 	justify-content:center;
 	background-color:white;
 	margin:35px;
-
-
-	
 }
 
 .skills {
@@ -140,4 +145,8 @@ button:hover {
 	background-color:white;
 	text-align:center;
 	font-weight:bold;
+} 
+
+.css-img{
+	width:150px;
 }
