--- a/style.css
+++ b/style.css
@@ -6,14 +6,11 @@ html {
 }
 
 nav{
-	font-family:sans-serif;
-	color:black;
-	overflow: hidden;
-	background-color: white;
+	background-color: rgb(56, 100, 80);
 	position:fixed;
 	top:0;
-	width:100%;
-}
+	z-index:999;
+} 
 
 nav a {
 	color:black;
@@ -75,16 +72,20 @@ width:250px;
 border-radius: 50%;
 }
  
-img hover {
- opacity: 1.0;
- filter: alpha(opacity=100);
+img {
+	transition: all .2s ease-in-out;}
+
+img:hover{
+	transform: scale(1.1);}
+
 }
 
 h2 h5 {
 	text-align:center ;
 }
 
-
+.grow {  }
+.grow:hover { transform: scale(1.1); }
 
 .jquery-img .css-img{
 	width:100px !important;
@@ -123,7 +124,6 @@ button:hover {
 	padding:10px;
 	justify-content:center;
 	background-color:white;
-	margin:35px;
 }
 
 .skills {
@@ -138,6 +138,7 @@ button:hover {
 .skill-text{
 	margin-left:auto;
 	margin-right:auto;
+	font-size:40px
 }
 
 
@@ -149,4 +150,31 @@ button:hover {
 
 .css-img{
 	width:150px;
+}
+.bootstrap-img{
+	margin-top:5%
+	margin-left:5%;
+}
+
+img.node-img {
+    margin-left: 10%;
+}
+
+img.jquery-img {
+    margin-left: 10%;
+}
+
+img.bootstrap-img {
+    margin-top: 5%;
+    margin-left: 18%;
+}
+
+.card{
+	width:75%;
+	margin-left: auto;
+    margin-right: auto;
+}
+
+.skill-text-2{
+	padding-bottom:50px;
 }
